Compositor: file output node created before 4.0.1 saves a different image at 4.1 #120175

Closed
opened 2024-04-02 15:51:03 +02:00 by Daisuke Takahashi · 2 comments

System Information
Operating system: macOS 14.4.1, Linux ubuntu 22.04
Graphics card: M1 pro (mac), RTX 4090 (ubuntu)

Blender Version
Broken: 4.1.0
Worked: 4.0.2

Short description of error
Compositor's file-output nodes that are created at blender <= 4.0.2 saves a blurred (or interpolated?) image at 4.1.0.

4.0.2.blend rendered by blender 4.0.2 (expected) 4.0.2.blend rendered by blender 4.1.0
created4.0.2_rendered4.0.2.png created4.0.2_rendered4.1.0.png

Exact steps for others to reproduce the error

  • Open attached 4.0.2.blend file in Blender 4.0
  • Render Image
  • Check the result in C:\tmp\ (if on Windows) - Expected

  • Open same attached 4.0.2.blend file now in Blender 4.1
  • Render Image
  • Compare the result - Wrong

  • Go to Compositing Workspace
  • Add a new File Output node
  • Set the same settings in Node > Properties (BW, Raw)
  • Replace the old File Output node with this new one
  • Render Image
  • Check the result - Expected
4.0.2_with-output-recreated-at-4.1.0.blend
Image-from-recreated-output_4.1.0.png

To create a file like the 4.0.2.blend:

  • on Blender 4.0 create a .blend file with compositor nodes including a file-output node
  • to highlight the issue, configure the .blend file to produce an image with jagged edges, e.g., use cycles, no denoise, samples=1, and no dither

Note that the compositor-output node does not show the issue.

**System Information** Operating system: macOS 14.4.1, Linux ubuntu 22.04 Graphics card: M1 pro (mac), RTX 4090 (ubuntu) **Blender Version** Broken: 4.1.0 Worked: 4.0.2 **Short description of error** Compositor's file-output nodes that are created at blender <= 4.0.2 saves a blurred (or interpolated?) image at 4.1.0. | `4.0.2.blend` rendered by blender 4.0.2 (expected) | `4.0.2.blend` rendered by blender 4.1.0 | | -------------------------------------------------------------------------------- | --------------------------------------------------------------- | | ![created4.0.2_rendered4.0.2.png](attachments/3ee8cf06-8b09-4778-831a-082ca48c0b06) | ![created4.0.2_rendered4.1.0.png](attachments/08c56465-7828-453d-8cd8-a3f6a4cd0ab6) | **Exact steps for others to reproduce the error** - Open attached [4.0.2.blend](attachments/65958d69-47bc-4ece-9db6-fdcb37d5e86c) file in Blender 4.0 - Render Image - Check the result in `C:\tmp\` (if on Windows) - Expected --- - Open same attached [4.0.2.blend](attachments/65958d69-47bc-4ece-9db6-fdcb37d5e86c) file now in Blender 4.1 - Render Image - Compare the result - Wrong --- - Go to Compositing Workspace - Add a new `File Output` node - Set the same settings in `Node` > `Properties` (`BW`, `Raw`) - Replace the old `File Output` node with this new one - Render Image - Check the result - Expected | `4.0.2_with-output-recreated-at-4.1.0.blend` | | --------------------------------------------------------------------- | | ![Image-from-recreated-output_4.1.0.png](/attachments/127e3372-6a59-449a-86f5-0595b59bbef1) | To create a file like the `4.0.2.blend`: - on Blender 4.0 create a .blend file with compositor nodes including a file-output node - to highlight the issue, configure the .blend file to produce an image with jagged edges, e.g., use cycles, no denoise, samples=1, and no dither Note that the compositor-output node does not show the issue.
Daisuke Takahashi added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-02 15:51:04 +02:00

Thank you for the report.
I can confirm the issue
I will bisect to find where the problem was introduced.

(Note: I edited the description to simplify the steps)

Thank you for the report. I can confirm the issue I will bisect to find where the problem was introduced. (Note: I edited the description to simplify the steps)

I had some problems when bisecting, so I couldn't test properly, but apparently the commit that caused the problem was 931c188ce5
@OmarEmaraDev ^

(Also tagging @zazizizou due to interest in the area)

I had some problems when bisecting, so I couldn't test properly, but apparently the commit that caused the problem was 931c188ce5 @OmarEmaraDev ^ (Also tagging @zazizizou due to interest in the area)
Omar Emara self-assigned this 2024-04-03 09:18:54 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-04 08:52:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120175
No description provided.