source/blender/imbuf/intern/divers.cc
@@ -844,8 +844,10 @@ void IMB_color_to_bw(ImBuf *ibuf)
   size_t i;
 
   if (rct_fl) {
-    for (i = IMB_get_rect_len(ibuf); i > 0; i--, rct_fl += 4) {
-      rct_fl[0] = rct_fl[1] = rct_fl[2] = IMB_colormanagement_get_luminance(rct_fl);
+    if (ibuf->channels >= 3) {
+      for (i = IMB_get_rect_len(ibuf); i > 0; i--, rct_fl += ibuf->channels) {
+        rct_fl[0] = rct_fl[1] = rct_fl[2] = IMB_colormanagement_get_luminance(rct_fl);
+      }
     }
   }
 
@@ -880,9 +882,11 @@ void IMB_saturation(ImBuf *ibuf, float sat)
   }
 
   if (rct_fl) {
-    for (i = IMB_get_rect_len(ibuf); i > 0; i--, rct_fl += 4) {
-      rgb_to_hsv_v(rct_fl, hsv);
-      hsv_to_rgb(hsv[0], hsv[1] * sat, hsv[2], rct_fl, rct_fl + 1, rct_fl + 2);
+    if (ibuf->channels >= 3) {
+      for (i = IMB_get_rect_len(ibuf); i > 0; i--, rct_fl += ibuf->channels) {
+        rgb_to_hsv_v(rct_fl, hsv);
+        hsv_to_rgb(hsv[0], hsv[1] * sat, hsv[2], rct_fl, rct_fl + 1, rct_fl + 2);
+      }
     }
   }
 }
